--- a/package.json
+++ b/package.json
@@ -16,6 +16,7 @@
     "react-redux": "^8.1.1",
     "react-router-dom": "^6.14.0",
     "react-scripts": "5.0.1",
+    "serve": "^14.2.0",
     "socket.io-client": "^4.7.1",
     "web-vitals": "^2.1.4"
   },
